--- a/index.html
+++ b/index.html
@@ -30,15 +30,52 @@
         <div class="navbar-nav">
             <a href="#home">Home</a>
             <a href="#about">Tentang Kami</a>
-            <a href="#produk">Produk</a>
+            <a href="#products">Produk</a>
             <a href="#contact">Kontak</a>
         </div>
 
         <div class="navbar-extra">
-            <a href="#" id="search"><i data-feather="search"></i></a>
-            <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i></a>
+            <a href="#" id="search-button"><i data-feather="search"></i></a>
+            <a href="#" id="shopping-cart-button"><i data-feather="shopping-cart"></i></a>
             <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
         </div>
+
+        <!-- Search Section Start -->
+        <div class="search-form">
+            <input type="search" id="search-box" placeholder="search here...">
+            <label for="search-box"><i data-feather="search"></i></label>
+        </div>
+        <!-- Search Section Start -->
+
+        <!-- Shopping Cart Start -->
+        <div class="shopping-cart">
+            <div class="cart-item">
+                <img src="img/produk-oli/oli-1.jpg" alt="Product 1">
+                <div class="item-detail">
+                    <h3>Product 1</h3>
+                    <div class="item-price">IDR 55K</div>
+                </div>
+                <i data-feather="trash-2" class="remove-item"></i>
+            </div>
+            <div class="cart-item">
+                <img src="img/produk-oli/oli-1.jpg" alt="Product 1">
+                <div class="item-detail">
+                    <h3>Product 1</h3>
+                    <div class="item-price">IDR 55K</div>
+                </div>
+                <i data-feather="trash-2" class="remove-item"></i>
+            </div>
+            <div class="cart-item">
+                <img src="img/produk-oli/oli-1.jpg" alt="Product 1">
+                <div class="item-detail">
+                    <h3>Product 1</h3>
+                    <div class="item-price">IDR 55K</div>
+                </div>
+                <i data-feather="trash-2" class="remove-item"></i>
+            </div>
+        </div>
+        <!-- Shopping Cart End -->
+
     </nav>
     <!-- Navbar end -->
 
@@ -74,41 +111,95 @@
     <!-- About Section End -->
 
     <!-- Produk Section Start -->
-    <section id="produk" class="produk">
+    <section id="products" class="products">
         <h2><span>Produk</span> Kami</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis delectus nisi officia, quod quam quo.
         </p>
 
         <div class="row">
-            <div class="produk-card">
-                <img src="img/produk-oli/oli-1.jpg" alt="Mpx-2">
-                <h3 class="produk-card-title">MPX-2</h3>
-                <p class="produk-card-price">IDR 55K</p>
+            <div class="product-card">
+                <div class="product-icons">
+                    <a href="#"><i data-feather="shopping-cart"></i></a>
+                    <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+                </div>
+                <div class="product-image">
+                    <img src="img/produk-oli/oli-1.jpg" alt="Product 1">
+                </div>
+                <div class="product-content">
+                    <h3>MPX-2</h3>
+                    <div class="product-stars">
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                    </div>
+                    <div class=" product-price">IDR 50K <span>IDR 55K</span>
+                    </div>
+                </div>
             </div>
-            <div class="produk-card">
-                <img src="img/produk-oli/oli-2.jpg" alt="Mpx-2">
-                <h3 class="produk-card-title">MPX-2</h3>
-                <p class="produk-card-price">IDR 55K</p>
+            <div class="product-card">
+                <div class="product-icons">
+                    <a href="#"><i data-feather="shopping-cart"></i></a>
+                    <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+                </div>
+                <div class="product-image">
+                    <img src="img/produk-oli/oli-1.jpg" alt="Product 1">
+                </div>
+                <div class="product-content">
+                    <h3>MPX-2</h3>
+                    <div class="product-stars">
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                    </div>
+                    <div class=" product-price">IDR 50K <span>IDR 55K</span>
+                    </div>
+                </div>
             </div>
-            <div class="produk-card">
-                <img src="img/produk-oli/oli-3.jpg" alt="Mpx-2">
-                <h3 class="produk-card-title">MPX-2</h3>
-                <p class="produk-card-price">IDR 55K</p>
+            <div class="product-card">
+                <div class="product-icons">
+                    <a href="#"><i data-feather="shopping-cart"></i></a>
+                    <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+                </div>
+                <div class="product-image">
+                    <img src="img/produk-oli/oli-1.jpg" alt="Product 1">
+                </div>
+                <div class="product-content">
+                    <h3>MPX-2</h3>
+                    <div class="product-stars">
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                    </div>
+                    <div class=" product-price">IDR 50K <span>IDR 55K</span>
+                    </div>
+                </div>
             </div>
-            <div class="produk-card">
-                <img src="img/produk-oli/oli-4.png" alt="Mpx-2">
-                <h3 class="produk-card-title">MPX-2</h3>
-                <p class="produk-card-price">IDR 55K</p>
-            </div>
-            <div class="produk-card">
-                <img src="img/produk-oli/oli-4.png" alt="Mpx-2">
-                <h3 class="produk-card-title">MPX-2</h3>
-                <p class="produk-card-price">IDR 55K</p>
-            </div>
-            <div class="produk-card">
-                <img src="img/produk-oli/oli-4.png" alt="Mpx-2">
-                <h3 class="produk-card-title">MPX-2</h3>
-                <p class="produk-card-price">IDR 55K</p>
+            <div class="product-card">
+                <div class="product-icons">
+                    <a href="#"><i data-feather="shopping-cart"></i></a>
+                    <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+                </div>
+                <div class="product-image">
+                    <img src="img/produk-oli/oli-1.jpg" alt="Product 1">
+                </div>
+                <div class="product-content">
+                    <h3>MPX-2</h3>
+                    <div class="product-stars">
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                    </div>
+                    <div class=" product-price">IDR 50K <span>55K</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -158,7 +249,7 @@
         <div class="links">
             <a href="#home">Home</a>
             <a href="#about">Tentang Kami</a>
-            <a href="#produk">Produk</a>
+            <a href="#products">Produk</a>
             <a href="#contact">Kontak</a>
         </div>
 
@@ -167,6 +258,32 @@
         </div>
     </footer>
     <!-- Footer End -->
+
+    <!-- Modal Box Item Detail Start -->
+    <div class="modal" id="item-detail-modal">
+        <div class="modal-container">
+            <a href="#" class="close-icon"><i data-feather="x"></i></a>
+            <div class="modal-content">
+                <img src="img/produk-oli/oli-1.jpg" alt="Product 1">
+                <div class="product-content">
+                    <h3>Product 1</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa in asperiores consequatur
+                        cupiditate blanditiis sapiente quas, odio reiciendis. Accusantium quaerat consequatur delectus
+                        doloribus, saepe mollitia?</p>
+                    <div class="product-stars">
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                        <i data-feather="star" class="star-full"></i>
+                    </div>
+                    <div class=" product-price">IDR 50K <span>IDR 55K</span></div>
+                    <a href="#"><i data-feather="shopping-cart"></i><span>add to cart</span></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal Box Item Detail End -->
 
     <!-- Feather Icons -->
     <script>
